--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,9 +20,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
-        pwd
-        ls
         npm run build --if-present
-        npm test
+        npm test:unit
+        npm test:e2e
       env:
         CI: true
