--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
-        npm test:unit
-        npm test:e2e
+        npm run test:unit
+        npm run test:e2e
       env:
         CI: true
