--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "core-js": "^3.4.4",
+    "eslint-config-prettier": "^6.10.0",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
+    "vue-typer": "^1.2.0",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
@@ -32,6 +35,7 @@
     "babel-eslint": "^10.0.3",
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
