--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "core-js": "^3.4.4",
     "eslint-config-prettier": "^6.10.0",
+    "firebase": "^7.13.1",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vue-typer": "^1.2.0",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
