--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-i18n": "^8.15.3",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.20.0",
     "vue-typer": "^1.2.0",
     "vuefire": "^2.2.2",
     "vuetify": "^2.3.5",
